--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "react-tabs": "^5.1.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
