--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "babel-preset-es2015": "^6.24.1",
     "next": "12.2.5",
     "react": "18.2.0",
