--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
       "baseUrl": ".",
       "paths": {
           "@lib/*": ["lib/*"],
-          "@components/*": ["components/*"]
+          "@components/*": ["components/*"],
+          "@graphql/*": ["graphql/*"],
         }
     },
   }
