--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
