--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
+    "@types/react": "^18.0.25",
     "autoprefixer": "^10.4.13",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
